# itmpl

./: .itmpl.toml  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: docs.yml  tests.yml
docs/: gen_ref_pages.py  index.md  using_custom_templates.md
docs/static/images/: itmpl-logo.psd
docs/stylesheets/: schemes.css
itmpl/: __init__.py  config.py  global_vars.py  main.py  metadata.py  templating.py  tree_utils.py  utils.py
itmpl/templates/mkdocs-material-site/: .itmpl.py  .itmpl.requirements.dev.txt  .itmpl.toml  mkdocs.yml
itmpl/templates/mkdocs-material-site/docs/: gen_ref_pages.py  index.md
itmpl/templates/mkdocs-material-site/docs/stylesheets/: schemes.css
itmpl/templates/poetry-project/: .itmpl.py  .itmpl.requirements.dev.txt  .itmpl.toml  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
reference/: index.html
reference/SUMMARY/: index.html
reference/config/: index.html
reference/global_vars/: index.html
reference/main/: index.html
reference/metadata/: index.html
reference/templating/: index.html
reference/tree_utils/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: conftest.py  test_config.py  test_metadata.py  test_templating.py  test_tree_utils.py  test_utils.py
tests/files/: test.toml
tests/files/templates/test-template-complete/: .itmpl.py  .itmpl.toml  {{ project_name }}.txt
tests/files/templates/test-template-exceptions/: .itmpl.py
using_custom_templates/: index.html
