[tool.poetry]
name = "itmpl"
version = "0.1.4"
description = "A project templating and scaffolding tool"
authors = ["Isaac Harris-Holt <isaac@harris-holt.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://itmpl.ihh.dev"
repository = "https://github.com/isaacharrisholt/itmpl"
documentation = "https://itmpl.ihh.dev"
exclude = [
    "**/.ruff_cache",
    "**/__pycache__",
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
pydantic = "^1.10.4"
jinja2 = "^3.1.2"
rich = "^13.3.1"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.245"
pyright = "^1.1.293"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocs-minify-plugin = "^0.6.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
mkdocs-literate-nav = "^0.6.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
tox = "^4.4.5"
mkdocs-glightbox = "^0.3.1"
mkdocs-include-dir-to-nav = "^1.2.0"

[tool.poetry.scripts]
itmpl = "itmpl.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.ruff]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.pyright]
pythonVersion = "3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
