[tool.poetry]
name = "{{ project_name }}"
version = "0.0.0"
description = "{{ project_description }}"
authors = ["{{ project_author }}"]
license = "{{ project_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ python_version }}"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
ruff = "^0.0.245"
pyright = "^1.1.293"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocs-minify-plugin = "^0.6.2"
mkdocstrings = "^0.20.0"
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
mkdocs-literate-nav = "^0.6.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
tox = "^4.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.ruff]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.pyright]
pythonVersion = "{{ python_version }}"
